@@ -1,5 +1,6 @@
 v1.13.1-snapshot
 ===========
+- #6903 Save global settings
 ===========
 
 v1.13.0-stable
